[gd_scene load_steps=4 format=3 uid="uid://cbgxhbs5pl4ks"]

[ext_resource type="Texture2D" uid="uid://druy24jwwsktn" path="res://blocks/block.png" id="1_eu2eb"]
[ext_resource type="Script" path="res://blocks/block.gd" id="2_lv0xa"]
[ext_resource type="Texture2D" uid="uid://dccs6cora5nau" path="res://blocks/arrow.png" id="3_gc6e2"]

[node name="Block" type="Sprite2D"]
show_behind_parent = true
texture_filter = 1
texture = ExtResource("1_eu2eb")
centered = false
script = ExtResource("2_lv0xa")

[node name="Arrow1" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("3_gc6e2")

[node name="Arrow2" type="Sprite2D" parent="."]
position = Vector2(32, 32)
rotation = -1.57079
texture = ExtResource("3_gc6e2")

[node name="Arrow3" type="Sprite2D" parent="."]
position = Vector2(32, 32)
rotation = 3.14159
texture = ExtResource("3_gc6e2")

[node name="Arrow4" type="Sprite2D" parent="."]
position = Vector2(32, 32)
rotation = 1.57079
texture = ExtResource("3_gc6e2")
